--- a/public/styles.css
+++ b/public/styles.css
@@ -73,3 +73,11 @@ body {
 .altura-navegacion {
     height: 40px!important;
 }
+.sombra1 {
+    -webkit-box-shadow: 1px -1px 10px -1px rgba(255, 148, 255, 0.756);
+    -moz-box-shadow: 1px -1px 10px -1px rgba(255,148,255,1);
+    box-shadow: 1px -1px 1px -1px rgba(255,148,255,1);
+}
+.margin-custom {
+    margin-top: -20px;
+}
