--- a/public/styles.css
+++ b/public/styles.css
@@ -1,48 +1,26 @@
+/* CLASES COMPLEMENTARIAS A TAILWIND */
+
 body {
     background-image: url('./imagenes/bocanada7.webp');
     opacity: 90%;
 }
-
+.swal-modal .swal-text {
+    text-align: center;
+}
 .contenedor-titulo-texto {
     background-color: #fff;
     color: red;
 }
-
 .imagenes-disco {
     min-width: 100px!important;
     height: 100px!important;
 }
-
 .back-video {
     position: absolute;
     top: 12%;
     row-gap: 30%;
     height: 10rem;
-    /* right: 0;
-    bottom: 0;
-    z-index: -1; */
 }
-/* video {
-    width: 70%;
-} */
-@media (max-width:768px) {
-    .back-video {
-        row-gap: 30%;
-    }
-    /* .video {
-        width: 60%;
-    } */
-    .texto-index-content {
-        padding: 1rem 1rem!important;
-        font-size: 16px!important;
-        list-style: none;
-        line-height: 1.2!important;
-        font-weight: 300;
-        text-shadow: 0px 1px 1px rgba(213, 208, 208, 0.553);
-    }
-}
-
-
 .bg-class {
     background: rgba(0, 0, 0, 0.735);
 }
@@ -53,7 +31,6 @@ body {
     font-weight: 300;
     text-shadow: 0px 1px 1px rgba(213, 208, 208, 0.553);
 }
-
 .bg-black-custom {
     background-color: rgba(0, 0, 0, 0.731)!important;
 }
@@ -81,8 +58,14 @@ body {
 .margin-custom {
     margin-top: -20px;
 }
+.flexi {
+    display: flex!important;
+    align-items: center;
+}
 
 
+
+/* MEDIA QUERIES PARA RESPONSIVE */
 
 @media(max-width: 767px) {
     .clasee {
@@ -90,15 +73,17 @@ body {
     }
    
 }
-/* .claseex {
-    display: none;
-}
-@media(max-width:767px) {
-    .claseex {
-        display: block!important;
+@media (max-width:768px) {
+    .back-video {
+        row-gap: 30%;
     }
-} */
-.flexi {
-    display: flex!important;
-    align-items: center;
+    .texto-index-content {
+        padding: 1rem 1rem!important;
+        font-size: 16px!important;
+        list-style: none;
+        line-height: 1.2!important;
+        font-weight: 300;
+        text-shadow: 0px 1px 1px rgba(213, 208, 208, 0.553);
+    }
 }
+
